Added basic load sharing between delegator and servers. Allowed separation of single tests vs combined suites (e.g. AllTests.class).  Need to test on Alden comps.